fixed word wrap

--- a/frontend/src/components/DuckyInput.css
+++ b/frontend/src/components/DuckyInput.css
@@ -17,10 +17,17 @@
     margin: 0;
     font-family: 'Roboto Mono', 'Droid Sans Mono', 'Lucida Console', Monaco, monospace;
     font-size: 12px;
+    
+
 }
 .overlay pre {
     margin: 2px;
     font-family: 'Roboto Mono', 'Droid Sans Mono', 'Lucida Console', Monaco, monospace;
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 
 textarea {
@@ -30,7 +37,7 @@ textarea {
     width: 100%;
     height: 100%;
     font-size: 12px;
-    color: #ffffff00;
+    color: #ff000000;
     caret-color: #ffffff;
     background-color: #00000022;
     z-index: 3;
